@@ -8,6 +8,7 @@
   * Add functionality to optionally to store a node's :level_column to Tree theory
   * Typo
   * Add example tables to documentation
+  * Force :dependent => :destroy on Tree's children association
 
 2009-06-15 - Sean Huber (shuber@huberry.com)
   * Tree accepts an array of order options
